updated backend link

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEicvIDK-bTt59nqzUA7MvwnU0P7Lb_cafaZfRTmcmDQnQ40fX-tCQTFlEHy60SgZygMmfDJkDk62RTLEmuTVcP0S0HS_Hgro07C1yzL5U0cnTOQhLlaJtVnI5-lN_teHvTX6hM0ahtbk4wR4ERNE3M4QZ8Y4G5-k-Qr3GfyIprvKqQ3U7f0ms8uaz8N2fE/s500/D-removebg-preview.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dammzoo</title>
